cluster/runtime/snapshot-2026-04-28/hami-webhook-mutating.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    meta.helm.sh/release-name: hami-webhook
    meta.helm.sh/release-namespace: hami-system
  creationTimestamp: "2026-04-27T03:34:22Z"
  generation: 2
  labels:
    app.kubernetes.io/managed-by: Helm
  name: hami-webhook-webhook
  resourceVersion: "20112390"
  uid: 32e51184-bf13-41df-a382-1566671cc010
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJkakNDQVJ5Z0F3SUJBZ0lSQVBlREVjTWFneDYwOENEVWJYdUZXdjR3Q2dZSUtvWkl6ajBFQXdJd0R6RU4KTUFzR0ExVUVDaE1FYm1sc01UQWdGdzB5TmpBME1qY3dNakl5TlROYUdBOHlNVEkyTURRd016QXlNakkxTTFvdwpEekVOTUFzR0ExVUVDaE1FYm1sc01UQlpNQk1HQnlxR1NNNDlBZ0VHQ0NxR1NNNDlBd0VIQTBJQUJIc2dFbU95CnpQWllFTHEwMmFIQUIxRXI1MnE1dlE0Vi9qV2hTVmg2S0RIRUh6Y1JFNUdlQ29nMDBMbDBaYnlDZXZ1RmhETGcKdDBYZXlXOVJaTldMVDF1alZ6QlZNQTRHQTFVZER3RUIvd1FFQXdJQ0JEQVRCZ05WSFNVRUREQUtCZ2dyQmdFRgpCUWNEQVRBUEJnTl [...]
    service:
      name: hami-webhook-scheduler
      namespace: hami-system
      path: /webhook
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: vgpu.hami.io
  namespaceSelector:
    matchExpressions:
    - key: hami.io/webhook
      operator: NotIn
      values:
      - ignore
  objectSelector:
    matchExpressions:
    - key: hami.io/webhook
      operator: NotIn
      values:
      - ignore
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
